# addnotespace

./: LICENSE.txt  README.md  pyproject.toml  setup.py
addnotespace/: __about__.py  main.py
env_files/: dev.env
scripts/: post_build_cleanup.ps1  post_build_cleanup.sh  write_version_to_file.py
src/: __about__.py  bulk_run.py  cli_exe.py  initilialize.py  logger_config.py  main.py
src/addnotespace/: __init__.py  app_windows.py  button_behaviour.py  cli.py  defaults.py  pdf.py  settings.py  style_loader.py  updates.py  widgets.py
tests/: __init__.py
ui_files/: info_dialogue.ui  main_window.ui  progress_dialogue.ui  style_variables.json  styles.qss  styles_template.qss
