[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "addnotespace"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "maromei", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "python-dotenv",
  "pyqt5",
  "PyPDF2"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/maromei/addnotespace#readme"
Issues = "https://github.com/maromei/addnotespace/issues"
Source = "https://github.com/maromei/addnotespace"

[tool.hatch.version]
path = "src/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=addnotespace --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.dev]

[tool.hatch.envs.dev.scripts]
run = "python src/main.py"

[tool.hatch.envs.dev.env-vars]
DOTENV_PATH = "env_files/dev.env"

[tool.hatch.envs.style]
skip-install = true
detached = true
python = "3.10"
dependencies = [
  "pre-commit",
  "black"
]

[tool.hatch.envs.style.scripts]
precommit-install = "pre-commit install"
