[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "addnotespace"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "maromei", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "python-dotenv",
  "pyqt5",
  "PyPDF2"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/maromei/addnotespace#readme"
Issues = "https://github.com/maromei/addnotespace/issues"
Source = "https://github.com/maromei/addnotespace"

[tool.hatch.version]
path = "src/__about__.py"

[tool.hatch.envs.default.scripts]
run = "python src/main.py"
run-bulk = "python src/bulk_run.py"

[tool.hatch.envs.default.env-vars]
DOTENV_PATH = "env_files/dev.env"

[tool.hatch.envs.style]
skip-install = true
detached = true
python = "3.10"
dependencies = [
  "pre-commit",
  "black"
]

[tool.hatch.envs.style.scripts]
precommit-install = "pre-commit install"

[tool.hatch.envs.build]
dependencies = [
  "cx_freeze"
]

[tool.hatch.envs.build.scripts]
build = "python setup.py build"
