[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "addnotespace"
description = "Add whitespace around your pdf for note taking."
readme = "README.md"
requires-python = ">=3.10"
keywords = []
authors = [
  { name = "maromei", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "python-dotenv",
  "pyqt5",
  "PyPDF2",
  "requests"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/maromei/addnotespace#readme"
Issues = "https://github.com/maromei/addnotespace/issues"
Source = "https://github.com/maromei/addnotespace"

[tool.hatch.version]
path = "src/__about__.py"

[tool.hatch.envs.default.scripts]
run = "python src/main.py"
run-bulk = "python src/bulk_run.py"

[tool.hatch.envs.default.env-vars]
DOTENV_PATH = "env_files/dev.env"

[tool.hatch.envs.style]
skip-install = true
detached = true
dependencies = [
  "pre-commit",
  "black"
]

[tool.hatch.envs.style.scripts]
precommit-install = "pre-commit install"

[tool.hatch.envs.build]
dependencies = [
  "cx_freeze",
  "GitPython"
]

[tool.hatch.envs.build.scripts]
windows = [
  "python scripts/write_version_to_file.py",
  "python setup.py build",
  "powershell ./scripts/post_build_cleanup.ps1"
]
linux = [
  "python scripts/write_version_to_file.py",
  "python setup.py build",
  "./scripts/post_build_cleanup.sh"
]
write_version = "python scripts/write_version_to_file.py"
